--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <main>
         <section class= "">
-            
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque voluptatum quos ab inventore necessitatibus ad aspernatur! Porro perferendis explicabo debitis dolorem culpa recusandae minima voluptates itaque, temporibus sunt dolore alias?
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur hic quis distinctio explicabo non quas doloribus repudiandae ab! Enim ea natus eveniet necessitatibus non. Voluptatum deserunt voluptate iure alias dolor!</p>
         </section>
         
     </main>
