--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 class="about">About Me </h2>
 
         <figure id="pp">
-            <img src="assets/images/backgroundimage.jpg" alt="">
+            <img src="assets/images/achi.jpg" alt="">
         </figure>
 
 
