--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-
-    <title>All about beauty by A </title>
-    <link rel="stylesheet" href="assets/css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All about beauty by A</title>
+    <link rel="stylesheet" href="assets/css/main-style.css">
 </head>
 
 <body>
