--- a/index2.html
+++ b/index2.html
@@ -13,8 +13,8 @@
         <section class="heading">
             <h1>All about beauty by A </h1>
             <nav>
-                <a href="">Blank 1</a>
-                <a href="">Blank 2</a>
+                <a href="">Home</a>
+                <a href="">About me</a>
             </nav>
         </section>
     </header>
@@ -26,18 +26,19 @@
             <img src="assets/images/achi.jpg" alt="">
         </figure>
 
-
         <section class="about">
             <p>Hi! Thanks for stopping by, My name is Aanchal. Welcome to my blog "All about beauty by A"<br> </p>
 
             <p>Beauty and writing has always been close to my heart since I was a teenager <br>
 
-            So, this website that you see is my first attempt at combining my web development skills and my passion for
-            beauty. <br></p>
+                So, this website that you see is my first attempt at combining my web development skills and my passion
+                for
+                beauty. <br></p>
 
             <p><em>Beauty and writing has always been close to my heart since I was a teenager.</em>
-            So via this blog, I am going to educate you guys about the basic skincare products focusing on their reviews
-            as well as some bits about makeup.
+                So via this blog, I am going to educate you guys about the basic skincare products focusing on their
+                reviews
+                as well as some bits about makeup.
             </p>
 
 
