--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
         <h2 class="about">About Me </h2>
 
-        <figure id="pp">
-            <img src="assets/images/products.jpg" alt="">
+        <figure>
+            <img id="pp" src="assets/images/products.jpg" alt="">
         </figure>
 
 
