--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <section class="heading">
-            <h1>All about beauty by A </h1>
-            <nav>
+            <h1 id="pgtitle">All about beauty by A </h1>
+            <nav class = "navigation">
                 <a href="">Home</a>
                 <a href="">About me</a>
             </nav>
@@ -20,13 +20,13 @@
     </header>
 
     <main>
-        <h2 class="about">About Me </h2>
+        <h2 class="aboutheader">About Me </h2>
 
-        <figure id="pp">
-            <img src="assets/images/achi.jpg" alt="">
+        <figure>
+            <img id="pp" src="assets/images/achi.jpg" alt="test">
         </figure>
 
-        <section class="about">
+        <section class="abouttext">
             <p>Hi! Thanks for stopping by, My name is Aanchal. Welcome to my blog "All about beauty by A"<br> </p>
 
             <p>Beauty and writing has always been close to my heart since I was a teenager <br>
