--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
             <h1 id="pgtitle">All about beauty by A </h1>
             <nav class = "navigation">
                 <a href="">Home</a>
-                <a href="">About me</a>
+                <a href="">About</a>
             </nav>
         </section>
     </header>
