--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <header>
         <section class="heading">
             <h1>All about beauty by A </h1>
-            <nav>
-                <a href="">Blank 1</a>
-                <a href="">Blank 2</a>
-            </nav>
+           <span class="dot"></span>
+           <span class="dot"></span>
+           <span class="dot"></span>
+           <span class="dot"></span>
+           <span class="dot"></span>
+           <span class="dot"></span>
+           <span class="dot"></span>
         </section>
     </header>
 
