--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <h2 class="about">About Me </h2>
+        <h2 id="about">About Me </h2>
 
         <figure>
             <img id="pp" src="assets/images/products.jpg" alt="">
