--- a/climatechange.html
+++ b/climatechange.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href> -->
+    <link rel="stylesheet" href="assets/css/climatechange.css">
     <style>
-        * {
+        /* * {
             box-sizing: border-box;
             margin: 0 auto;
 
@@ -31,7 +31,7 @@
 
         img{
             width: 10%;
-        }
+        } */
     </style>
 </head>
 
@@ -39,87 +39,28 @@
     <header></header>
     <main>
         <div id="content#1" class="wrapper">
-            <div class= "container mythoughts">
+            <div class="container mythoughts">
                 <h2>My thoughts</h2>
                 <p>Hello, I am Aanchal</p>
             </div>
+
             <div class="container images">
                 <h2>Images</h2>
-                <div>
                     <figure>
                         <img src="/assets/images/backgroundimage.jpg" alt="">
                     </figure>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate aliquam odit sit ipsa quidem!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci
+                        officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate
+                        aliquam odit sit ipsa quidem!</p>
 
-                </div>
             </div>
+
             <div class="container action">
                 <h2>Action</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sunt placeat aliquid quibusdam eos officia deserunt dolorem aperiam, atque, nihil eaque, fugit esse reiciendis cupiditate. Provident saepe aliquam enim ab.</p>
-            </div>
-        </div>
-        <div id="content#2" class="wrapper">
-            <div class= "container mythoughts">
-                <h2>My thoughts #2</h2>
-                <p>Hello, I am Aanchal</p>
-            </div>
-            <div class="container images">
-                <h2>Images</h2>
-                <div>
-                    <figure>
-                        <img src="/assets/images/backgroundimage.jpg" alt="">
-                    </figure>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate aliquam odit sit ipsa quidem!</p>
-
-                </div>
-            </div>
-            <div class="container action">
-                <h2>Action</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sunt placeat aliquid quibusdam eos officia deserunt dolorem aperiam, atque, nihil eaque, fugit esse reiciendis cupiditate. Provident saepe aliquam enim ab.</p>
-            </div>
-        </div>
-        <div id="content#3" class="wrapper">
-            <div class= "container mythoughts">
-                <h2>My thoughts #2</h2>
-                <p>Hello, I am Aanchal</p>
-            </div>
-            <div class="container images">
-                <h2>Images</h2>
-                <div>
-                    <figure>
-                        <img src="/assets/images/backgroundimage.jpg" alt="">
-                    </figure>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate aliquam odit sit ipsa quidem!</p>
-
-                </div>
-            </div>
-            <div class="container action">
-                <h2>Action</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sunt placeat aliquid quibusdam eos officia deserunt dolorem aperiam, atque, nihil eaque, fugit esse reiciendis cupiditate. Provident saepe aliquam enim ab.</p>
-            </div>
-        </div>
-        <div id="content#2" class="wrapper">
-            <div class= "container mythoughts">
-                <h2>My thoughts #2</h2>
-                <p>Hello, I am Aanchal</p>
-            </div>
-            <div class="container images">
-                <h2>Images</h2>
-                <div>
-                    <figure>
-                        <img src="/assets/images/backgroundimage.jpg" alt="">
-                    </figure>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate aliquam odit sit ipsa quidem!</p>
-
-                </div>
-            </div>
-            <div class="container action">
-                <h2>Action</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sunt placeat aliquid quibusdam eos officia deserunt dolorem aperiam, atque, nihil eaque, fugit esse reiciendis cupiditate. Provident saepe aliquam enim ab.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim sunt placeat aliquid quibusdam eos
+                    officia deserunt dolorem aperiam, atque, nihil eaque, fugit esse reiciendis cupiditate. Provident
+                    saepe aliquam enim ab.</p>
             </div>
         </div>
     </main>
