--- a/climatechange.html
+++ b/climatechange.html
@@ -46,7 +46,9 @@
 
             <div class="container images">
                 <h2>Images</h2>
-            
+            <figure>
+                <img src="assets/images/smoke.jpg" alt="">
+            </figure>
 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci
                         officiis dolor excepturi fuga tempora sapiente magni veritatis sed earum et assumenda cupiditate
