--- a/climatechange.html
+++ b/climatechange.html
@@ -47,7 +47,8 @@
             <div class="container images">
                 <h2>Images</h2>
             <figure>
-                <img src="assets/images/smoke.jpg" alt="">
+                <img src="assets/images/smoke.jpg" alt="" width="70px" height="70px">
+                <img src="assets/images/earth.jpg" width="20px" height="70px">
             </figure>
 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non laborum recusandae, adipisci
